[gd_scene load_steps=7 format=3 uid="uid://dkv2041id3sxo"]

[ext_resource type="Theme" uid="uid://d3mc6bsqrw6m6" path="res://RoundTheme.tres" id="1_walu3"]
[ext_resource type="Script" uid="uid://b5ffqn33q8sei" path="res://Codes/Instances/Interface/Project.gd" id="2_1cb16"]

[sub_resource type="LabelSettings" id="LabelSettings_55xfh"]
font_size = 15
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_e7msi"]
resource_name = "Hover"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}

[sub_resource type="Animation" id="Animation_f4p02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrx0j"]
_data = {
&"Hover": SubResource("Animation_e7msi"),
&"RESET": SubResource("Animation_f4p02")
}

[node name="Project" type="Control"]
custom_minimum_size = Vector2(260, 350)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -764.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_walu3")
script = ExtResource("2_1cb16")

[node name="Offset" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 165)
mouse_filter = 2

[node name="Card" type="Panel" parent="Offset"]
modulate = Color(0.359069, 0.359069, 0.359069, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Band" type="Control" parent="Offset"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.15
mouse_filter = 2

[node name="Color" type="Panel" parent="Offset/Band"]
modulate = Color(0.65834, 0.65834, 0.65834, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Name" type="Label" parent="Offset/Band"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
text = "Project Name"
label_settings = SubResource("LabelSettings_55xfh")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Informations" type="Control" parent="Offset"]
visible = false
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.95
mouse_filter = 2

[node name="Vertical" type="VBoxContainer" parent="Offset/Informations"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Nodes" type="Label" parent="Offset/Informations/Vertical"]
layout_mode = 2
text = "Total Nodes : "

[node name="Groups" type="Label" parent="Offset/Informations/Vertical"]
layout_mode = 2
text = "Groups : "

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xrx0j")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
